# bcdl

./: .gitignore  README.md  bcdl.py  pyproject.toml
.claude/: gsd-file-manifest.json
.claude/agents/: gsd-debugger.md  gsd-executor.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-verifier.md
.claude/commands/gsd/: add-backlog.md  add-phase.md  add-tests.md  add-todo.md  audit-milestone.md  audit-uat.md  autonomous.md  check-todos.md  cleanup.md  complete-milestone.md  debug.md  discuss-phase.md  do.md  execute-phase.md  fast.md  health.md  help.md  insert-phase.md  list-phase-assumptions.md  map-codebase.md  new-milestone.md  new-project.md  next.md  note.md  pause-work.md  plan-milestone-gaps.md  plan-phase.md  plant-seed.md  pr-branch.md  profile-user.md  progress.md  quick.md  reapply-patches.md  remove-phase.md  research-phase.md  resume-work.md  review-backlog.md  review.md  session-report.md  set-profile.md  (+9 more)
.claude/get-shit-done/references/: decimal-phase-calculation.md  git-integration.md  (+5 more)
.github/workflows/: ci.yml
.planning/: HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
tests/: test_bcdl.py
(+71 files in other folders)
